# codex-deepseek-proxy

./: .env.example  README.en.md  README.md  package.json  server.mjs
.github/workflows/: build-desktop.yml
desktop/: README.md  index.html  main.js  package.json  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
