[package]
name = "codex-deepseek-proxy-desktop"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "codex_deepseek_proxy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-deepseek-proxy-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
async-stream = "0.3"
chrono = "0.4"
dirs = "5"
toml_edit = "0.22"
